configurada funcionalidade de verificação de expiração com `inngest`

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "services:stop": "docker compose stop",
     "services:down": "docker compose down",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "stripe:listen": "stripe listen --forward-to http://localhost:3000/api/webhook/stripe",
+    "inngest:dev": "inngest-cli dev"
   },
   "dependencies": {
     "@arcjet/next": "1.0.0-beta.1",
@@ -36,6 +38,8 @@
     "@uploadthing/react": "^7.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "inngest": "^3.31.3",
+    "inngest-cli": "^1.4.5",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
@@ -43,6 +47,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "stripe": "^17.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.4.4",
